@@ -1,0 +1,3 @@
+	.data
+foo:
+	.dc.a bar
